# cm

./: README.md
lw1/lw1_1/: CMakeLists.txt  main.cpp  readme.md
lw1/lw1_2/: CMakeLists.txt  main.cpp  readme.md
lw1/lw1_3/: CMakeLists.txt  main.cpp
lw1/lw1_4/: CMakeLists.txt  main.cpp  readme.md
lw1/lw1_5/: CMakeLists.txt  main.cpp  readme.md
lw2/lw2_2/: CMakeLists.txt  input.txt  main.cpp
lw3/lw3_3/: CMakeLists.txt  main.cpp
lw4/lw4_2/: CMakeLists.txt  input.txt  main.cpp  main_2.cpp
